// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process XML nodes correctly correctly creates nodes from XML 1`] = `
Array [
  Array [
    Object {
      "attributes": Object {
        "id": "bk101",
      },
      "author": Object {
        "text": "Gambardella, Matthew",
      },
      "children": Array [],
      "description": Object {
        "text": "An in-depth look at creating applications
            with XML.",
      },
      "description_html": Object {
        "cdata": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
      },
      "genre": Object {
        "text": "Computer",
      },
      "id": "bk101",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "44.95",
      },
      "publish_date": Object {
        "text": "2000-10-01",
      },
      "publish_date_explicit": Object {
        "day": Object {
          "text": "01",
        },
        "month": Object {
          "month_name": Object {
            "attributes": Object {
              "lang": "en-gb",
            },
            "text": "October",
          },
          "text": "
                10
                ",
        },
        "year": Object {
          "text": "2000",
        },
      },
      "title": Object {
        "text": "XML Developer's Guide",
      },
    },
  ],
  Array [
    Object {
      "attributes": Object {
        "id": "bk102",
      },
      "author": Object {
        "text": "Ralls, Kim",
      },
      "children": Array [],
      "description": Object {
        "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
      },
      "description_html": Object {
        "cdata": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
      },
      "genre": Object {
        "text": "Fantasy",
      },
      "id": "bk102",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "5.95",
      },
      "publish_date": Object {
        "text": "2000-12-16",
      },
      "publish_date_explicit": Object {
        "day": Object {
          "text": "16",
        },
        "month": Object {
          "month_name": Object {
            "attributes": Object {
              "lang": "en-gb",
            },
            "text": "December",
          },
          "text": "
                12
                ",
        },
        "year": Object {
          "text": "2000",
        },
      },
      "title": Object {
        "text": "Midnight Rain",
      },
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk101",
        },
        "author": Object {
          "text": "Gambardella, Matthew",
        },
        "children": Array [],
        "description": Object {
          "text": "An in-depth look at creating applications
            with XML.",
        },
        "description_html": Object {
          "cdata": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
        },
        "genre": Object {
          "text": "Computer",
        },
        "id": "bk101",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "44.95",
        },
        "publish_date": Object {
          "text": "2000-10-01",
        },
        "publish_date_explicit": Object {
          "day": Object {
            "text": "01",
          },
          "month": Object {
            "month_name": Object {
              "attributes": Object {
                "lang": "en-gb",
              },
              "text": "October",
            },
            "text": "
                10
                ",
          },
          "year": Object {
            "text": "2000",
          },
        },
        "title": Object {
          "text": "XML Developer's Guide",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk102",
        },
        "author": Object {
          "text": "Ralls, Kim",
        },
        "children": Array [],
        "description": Object {
          "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
        },
        "description_html": Object {
          "cdata": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
        },
        "genre": Object {
          "text": "Fantasy",
        },
        "id": "bk102",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "5.95",
        },
        "publish_date": Object {
          "text": "2000-12-16",
        },
        "publish_date_explicit": Object {
          "day": Object {
            "text": "16",
          },
          "month": Object {
            "month_name": Object {
              "attributes": Object {
                "lang": "en-gb",
              },
              "text": "December",
            },
            "text": "
                12
                ",
          },
          "year": Object {
            "text": "2000",
          },
        },
        "title": Object {
          "text": "Midnight Rain",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML in the legacy v2.x format 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "attributes",
      "parent": "whatever",
      "xmlChildren": "1.0",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "book",
      "parent": "whatever",
      "xmlChildren": Array [
        Object {
          "content": "bk101",
          "name": "attributes",
        },
        Object {
          "content": "Gambardella, Matthew",
          "name": "author",
        },
        Object {
          "content": "XML Developer's Guide",
          "name": "title",
        },
        Object {
          "content": "Computer",
          "name": "genre",
        },
        Object {
          "content": "44.95",
          "name": "price",
        },
        Object {
          "content": "2000-10-01",
          "name": "publish_date",
        },
        Object {
          "content": Array [
            Object {
              "content": "2000",
              "name": "year",
            },
            Object {
              "content": Array [
                Object {
                  "content": "
                10
                ",
                  "name": "text",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": "en-gb",
                      "name": "attributes",
                    },
                    Object {
                      "content": "October",
                      "name": "text",
                    },
                  ],
                  "name": "month_name",
                },
              ],
              "name": "month",
            },
            Object {
              "content": "01",
              "name": "day",
            },
          ],
          "name": "publish_date_explicit",
        },
        Object {
          "content": "An in-depth look at creating applications
            with XML.",
          "name": "description",
        },
        Object {
          "content": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
          "name": "description_html",
        },
      ],
    },
  ],
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "book",
      "parent": "whatever",
      "xmlChildren": Array [
        Object {
          "content": "bk102",
          "name": "attributes",
        },
        Object {
          "content": "Ralls, Kim",
          "name": "author",
        },
        Object {
          "content": "Midnight Rain",
          "name": "title",
        },
        Object {
          "content": "Fantasy",
          "name": "genre",
        },
        Object {
          "content": "5.95",
          "name": "price",
        },
        Object {
          "content": "2000-12-16",
          "name": "publish_date",
        },
        Object {
          "content": Array [
            Object {
              "content": "2000",
              "name": "year",
            },
            Object {
              "content": Array [
                Object {
                  "content": "
                12
                ",
                  "name": "text",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": "en-gb",
                      "name": "attributes",
                    },
                    Object {
                      "content": "December",
                      "name": "text",
                    },
                  ],
                  "name": "month_name",
                },
              ],
              "name": "month",
            },
            Object {
              "content": "16",
              "name": "day",
            },
          ],
          "name": "publish_date_explicit",
        },
        Object {
          "content": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
          "name": "description",
        },
        Object {
          "content": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
          "name": "description_html",
        },
      ],
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML in the legacy v2.x format 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "attributes",
        "parent": "whatever",
        "xmlChildren": "1.0",
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "book",
        "parent": "whatever",
        "xmlChildren": Array [
          Object {
            "content": "bk101",
            "name": "attributes",
          },
          Object {
            "content": "Gambardella, Matthew",
            "name": "author",
          },
          Object {
            "content": "XML Developer's Guide",
            "name": "title",
          },
          Object {
            "content": "Computer",
            "name": "genre",
          },
          Object {
            "content": "44.95",
            "name": "price",
          },
          Object {
            "content": "2000-10-01",
            "name": "publish_date",
          },
          Object {
            "content": Array [
              Object {
                "content": "2000",
                "name": "year",
              },
              Object {
                "content": Array [
                  Object {
                    "content": "
                10
                ",
                    "name": "text",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "content": "en-gb",
                        "name": "attributes",
                      },
                      Object {
                        "content": "October",
                        "name": "text",
                      },
                    ],
                    "name": "month_name",
                  },
                ],
                "name": "month",
              },
              Object {
                "content": "01",
                "name": "day",
              },
            ],
            "name": "publish_date_explicit",
          },
          Object {
            "content": "An in-depth look at creating applications
            with XML.",
            "name": "description",
          },
          Object {
            "content": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
            "name": "description_html",
          },
        ],
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "book",
        "parent": "whatever",
        "xmlChildren": Array [
          Object {
            "content": "bk102",
            "name": "attributes",
          },
          Object {
            "content": "Ralls, Kim",
            "name": "author",
          },
          Object {
            "content": "Midnight Rain",
            "name": "title",
          },
          Object {
            "content": "Fantasy",
            "name": "genre",
          },
          Object {
            "content": "5.95",
            "name": "price",
          },
          Object {
            "content": "2000-12-16",
            "name": "publish_date",
          },
          Object {
            "content": Array [
              Object {
                "content": "2000",
                "name": "year",
              },
              Object {
                "content": Array [
                  Object {
                    "content": "
                12
                ",
                    "name": "text",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "content": "en-gb",
                        "name": "attributes",
                      },
                      Object {
                        "content": "December",
                        "name": "text",
                      },
                    ],
                    "name": "month_name",
                  },
                ],
                "name": "month",
              },
              Object {
                "content": "16",
                "name": "day",
              },
            ],
            "name": "publish_date_explicit",
          },
          Object {
            "content": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
            "name": "description",
          },
          Object {
            "content": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
            "name": "description_html",
          },
        ],
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML with plugin options set 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "name": "attributes",
      "parent": "whatever",
      "version": "1.0",
    },
  ],
  Array [
    Object {
      "attributes": Object {
        "id": "bk101",
      },
      "author": Object {
        "text": "Gambardella, Matthew",
      },
      "children": Array [],
      "description": Object {
        "text": "An in-depth look at creating applications
            with XML.",
      },
      "description_html": Object {
        "cdata": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
      },
      "genre": Object {
        "text": "Computer",
      },
      "id": "bk101",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "44.95",
      },
      "publish_date": Object {
        "text": "2000-10-01",
      },
      "publish_date_explicit": Object {
        "day": Object {
          "text": "01",
        },
        "month": Object {
          "month_name": Object {
            "attributes": Object {
              "lang": "en-gb",
            },
            "text": "October",
          },
          "text": "
                10
                ",
        },
        "year": Object {
          "text": "2000",
        },
      },
      "title": Object {
        "text": "XML Developer's Guide",
      },
    },
  ],
  Array [
    Object {
      "attributes": Object {
        "id": "bk102",
      },
      "author": Object {
        "text": "Ralls, Kim",
      },
      "children": Array [],
      "description": Object {
        "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
      },
      "description_html": Object {
        "cdata": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
      },
      "genre": Object {
        "text": "Fantasy",
      },
      "id": "bk102",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameXml",
      },
      "parent": "whatever",
      "price": Object {
        "text": "5.95",
      },
      "publish_date": Object {
        "text": "2000-12-16",
      },
      "publish_date_explicit": Object {
        "day": Object {
          "text": "16",
        },
        "month": Object {
          "month_name": Object {
            "attributes": Object {
              "lang": "en-gb",
            },
            "text": "December",
          },
          "text": "
                12
                ",
        },
        "year": Object {
          "text": "2000",
        },
      },
      "title": Object {
        "text": "Midnight Rain",
      },
    },
  ],
]
`;

exports[`Process XML nodes correctly correctly creates nodes from XML with plugin options set 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "name": "attributes",
        "parent": "whatever",
        "version": "1.0",
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk101",
        },
        "author": Object {
          "text": "Gambardella, Matthew",
        },
        "children": Array [],
        "description": Object {
          "text": "An in-depth look at creating applications
            with XML.",
        },
        "description_html": Object {
          "cdata": "
              <p>An in-depth look at creating applications
            with XML.</p>
            ",
        },
        "genre": Object {
          "text": "Computer",
        },
        "id": "bk101",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "44.95",
        },
        "publish_date": Object {
          "text": "2000-10-01",
        },
        "publish_date_explicit": Object {
          "day": Object {
            "text": "01",
          },
          "month": Object {
            "month_name": Object {
              "attributes": Object {
                "lang": "en-gb",
              },
              "text": "October",
            },
            "text": "
                10
                ",
          },
          "year": Object {
            "text": "2000",
          },
        },
        "title": Object {
          "text": "XML Developer's Guide",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "attributes": Object {
          "id": "bk102",
        },
        "author": Object {
          "text": "Ralls, Kim",
        },
        "children": Array [],
        "description": Object {
          "text": "A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.",
        },
        "description_html": Object {
          "cdata": "
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ",
        },
        "genre": Object {
          "text": "Fantasy",
        },
        "id": "bk102",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameXml",
        },
        "parent": "whatever",
        "price": Object {
          "text": "5.95",
        },
        "publish_date": Object {
          "text": "2000-12-16",
        },
        "publish_date_explicit": Object {
          "day": Object {
            "text": "16",
          },
          "month": Object {
            "month_name": Object {
              "attributes": Object {
                "lang": "en-gb",
              },
              "text": "December",
            },
            "text": "
                12
                ",
          },
          "year": Object {
            "text": "2000",
          },
        },
        "title": Object {
          "text": "Midnight Rain",
        },
      },
      "parent": Object {
        "children": Array [],
        "content": "
      <?xml version=\\"1.0\\"?>
      <catalog>
        <book id=\\"bk101\\">
            <author>Gambardella, Matthew</author>
            <title>XML Developer's Guide</title>
            <genre>Computer</genre>
            <price>44.95</price>
            <publish_date>2000-10-01</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                10
                <month_name lang=\\"en-gb\\">October</month_name>
              </month>
              <day>01</day>
            </publish_date_explicit>
            <description>An in-depth look at creating applications
            with XML.</description>
            <description_html><![CDATA[
              <p>An in-depth look at creating applications
            with XML.</p>
            ]]></description_html>
         </book>
         <book id=\\"bk102\\">
            <author>Ralls, Kim</author>
            <title>Midnight Rain</title>
            <genre>Fantasy</genre>
            <price>5.95</price>
            <publish_date>2000-12-16</publish_date>
            <publish_date_explicit>
              <year>2000</year>
              <month>
                12
                <month_name lang=\\"en-gb\\">December</month_name>
              </month>
              <day>16</day>
            </publish_date_explicit>
            <description>A former architect battles corporate zombies,
            an evil sorceress, and her own childhood to become queen
            of the world.</description>
            <description_html><![CDATA[
              <p>A former architect battles <strong>corporate zombies</strong>,
            an evil sorceress, and her own childhood to become queen
            of the world.</p>
            ]]></description_html>
         </book>
      </catalog>
    ",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/xml",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;
